@@ -1,3 +1,12 @@
+2008-08-28  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c
+	(bvw_handle_application_message), (bacon_video_widget_close):
+	* src/backend/bacon-video-widget-xine.c (frame_output_cb),
+	(bacon_video_widget_close):
+	Never auto-resize a stream that's already been resized, wait for
+	the next file to be opened to do that (Closes: #481944)
+
 2008-08-27  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plugins/totem-plugins-engine.c
